Made (foregroundColor|backgroundColor|fontStyle|elementForegroundColor|elementBackgroundColor|elementFontStyle|highlightPairs|smartTypingPairs|increaseIndentPattern) all be invalid.illegal to better mark their status and discourage their use.
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@4575 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -678,9 +678,15 @@
 				</dict>
 				<dict>
 					<key>match</key>
-					<string>\b(swallow|foregroundColor|backgroundColor|fontStyle|elementForegroundColor|elementBackgroundColor|elementFontStyle|mode|highlightPairs|smartTypingPairs|increaseIndentPattern)\b(?=\s*=)</string>
+					<string>\b(swallow|mode)\b(?=\s*=)</string>
 					<key>name</key>
 					<string>invalid.deprecated.constant.tm-language-def</string>
+				</dict>
+				<dict>
+					<key>match</key>
+					<string>\b(foregroundColor|backgroundColor|fontStyle|elementForegroundColor|elementBackgroundColor|elementFontStyle|highlightPairs|smartTypingPairs|increaseIndentPattern)\b(?=\s*=)</string>
+					<key>name</key>
+					<string>invalid.illegal.constant.outdated.tm-language-def</string>
 				</dict>
 				<dict>
 					<key>match</key>
