--- a/info.plist
+++ b/info.plist
@@ -104,6 +104,8 @@
 		<string>7AA7E17E-80A3-4F64-80B8-37D335B3BAE4</string>
 		<string>D9B7683F-308C-4A42-92FB-6DFC06240A92</string>
 		<string>8C3D6E62-E865-4655-9B20-E3B95F07F9B6</string>
+		<string>3E5051E7-18CF-4BD4-89A5-045416831972</string>
+		<string>36B66AAB-42A5-4366-B7C1-790A749181D4</string>
 		<string>02F6DE2C-3334-4DCE-9FBB-6F8906653E5C</string>
 		<string>4AB06A04-02CF-4E7B-9E7E-07747A68160C</string>
 		<string>D5BA7FE7-543F-47FC-BECD-750200B81762</string>
