• Add the meta.rule.repository-item scope to repository items. • Exclude that scope from the repository rule snippet.
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@4872 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -302,6 +302,8 @@
 											<string>keyword.operator.dictionary.tm-language-def</string>
 										</dict>
 									</dict>
+									<key>name</key>
+									<string>meta.rule.repository-item.tm-language-def</string>
 									<key>patterns</key>
 									<array>
 										<dict>
