• add command to copy the current scope to the clipboard • put quotes around $TM_SCOPE in Show Scope (just to be safe)
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@4961 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -28,6 +28,7 @@
 			<string>DA0A4E77-5F16-11D9-B9C3-000D93589AF6</string>
 			<string>------------------------------------</string>
 			<string>48976460-B5A4-11D9-87C9-000D93589AF6</string>
+			<string>F9CD7A8F-9EE9-483B-86BE-12D576AFC036</string>
 			<string>FC48968D-E3DE-4FEC-B82C-CB2D0CC3BCC1</string>
 			<string>------------------------------------</string>
 			<string>20B6054F-965B-4C9B-91DA-E6868A721954</string>
@@ -36,6 +37,8 @@
 			<string>BBB8AE46-0694-4453-B6C5-9B9633B891B2</string>
 			<string>------------------------------------</string>
 			<string>E5142394-B07A-11D9-8EC4-000D93589AF6</string>
+			<string>8A6A5847-998C-4403-9268-072ED4262EC6</string>
+			<string>65EDFD8E-0A95-4AB8-AF07-53AD63B00E06</string>
 		</array>
 		<key>submenus</key>
 		<dict>
@@ -83,6 +86,7 @@
 		<string>ED204720-38FC-427C-B91E-D6AE866DAE3A</string>
 		<string>970BA294-B667-11D9-8D53-00039369B986</string>
 		<string>48976460-B5A4-11D9-87C9-000D93589AF6</string>
+		<string>F9CD7A8F-9EE9-483B-86BE-12D576AFC036</string>
 		<string>DA0A4E77-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>20B6054F-965B-4C9B-91DA-E6868A721954</string>
 		<string>5C4108F1-7979-413C-A6DF-3271708C7B60</string>
@@ -114,6 +118,8 @@
 		<string>4AB06A04-02CF-4E7B-9E7E-07747A68160C</string>
 		<string>D5BA7FE7-543F-47FC-BECD-750200B81762</string>
 		<string>A9191F2E-8FAC-41B9-B729-9663E42452DD</string>
+		<string>8A6A5847-998C-4403-9268-072ED4262EC6</string>
+		<string>65EDFD8E-0A95-4AB8-AF07-53AD63B00E06</string>
 	</array>
 	<key>uuid</key>
 	<string>5A9D4FC6-6CBE-11D9-A21B-000D93589AF6</string>
