--- a/Commands/Restart TextMate.plist
+++ b/Commands/Restart TextMate.plist
@@ -8,12 +8,14 @@
 	<string>{ APP_PATH=$(ps -xwwp $PPID -o command|grep -o '.*.app')
   osascript -e 'tell app "TextMate" to quit'
 
-  for (( i = 0; i &lt; 5 &amp;&amp; $(echo $(ps -xp $PPID|wc -l))-1; i++ )); do
+  for (( i = 0; i &lt; 50 &amp;&amp; $(echo $(ps -xp $PPID|wc -l))-1; i++ )); do
     sleep .2;
   done
 
   if [[ $(ps -xp $PPID|wc -l) -ne 2 ]]; then
     open "$APP_PATH"
+  else
+    echo &gt;/dev/console "$(date +%Y-%m-%d\ %H:%M:%S): TextMate is still running. Relaunch aborted."
   fi
 
 } &amp;&gt;/dev/null &amp;</string>
