--- a/Commands/Install “Edit in TextMate”….plist
+++ b/Commands/Install “Edit in TextMate”….plist
@@ -5,10 +5,13 @@
 	<key>beforeRunningCommand</key>
 	<string>nop</string>
 	<key>command</key>
-	<string>SRC="$(ps -xwwp $PPID -o command|grep TextMate.app|perl -pe 's/(.*?.app).*/\1/')/Contents/Resources/Edit in TextMate"
+	<string>. "$TM_SUPPORT_PATH/lib/webpreview.sh"
+html_header "Install “Edit in TextMate…”"
+
+SRC="$(ruby -r"$TM_SUPPORT_PATH/lib/textmate.rb" -e 'print TextMate.app_path')/Contents/Resources/Edit in TextMate"
 
 # check if we have the input manager in TextMate.app
-[[ ! -d "$SRC" ]] &amp;&amp; { echo "&lt;h1&gt;Error&lt;/h1&gt;&lt;p&gt;The input manager (&lt;tt&gt;$SRC&lt;/tt&gt;) was not found in the TextMate application bundle.&lt;p&gt;You may need a newer version of TextMate."; exit; }
+[[ ! -d "$SRC" ]] &amp;&amp; { echo "&lt;h2&gt;Error&lt;/h2&gt;&lt;p&gt;The input manager (&lt;tt&gt;$SRC&lt;/tt&gt;) was not found in the TextMate application bundle.&lt;p&gt;You may need a newer version of TextMate."; exit; }
 
 # javascript which creates the link (by calling out to the shell)
 cat &lt;&lt;EOF
@@ -26,8 +29,6 @@ EOF
 
 # documentation which links to the script above
 Markdown.pl &lt;&lt;"EOF"
-# The Edit in TextMate Action
-
 ## Intro
 
 Included with TextMate is an input manager which can add an “Edit in TextMate” menu item to the Edit menu of other applications.
@@ -75,7 +76,9 @@ Previously the functionality was provided by a Service, but the synchronous natu
 Generally the input manager approach works better, but it is a hack, so e.g. if you call upon the Edit in TextMate action and close the window which held the text, or was calling the service from the field editors text view and advance focus, before the text has been returned, do not be surprised if the text does not show up in the proper text view.
 
 That said, it should be rather robust, and you can even call “Edit in TextMate” from within TextMate (in its Cocoa text views used e.g. in the Bundle Editor).
-EOF</string>
+EOF
+
+html_footer</string>
 	<key>input</key>
 	<string>none</string>
 	<key>name</key>
