• add ‘--float’ argument when calling CocoaDialog — this should make the dialog float on top of other windows, so that it doesn’t get lost, though not all dialog types seem to support the argument.
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@5340 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/Find All in Document.plist
+++ b/Commands/Find All in Document.plist
@@ -15,7 +15,7 @@ def html_esc (text)
 	text.gsub(/&lt;/, '&amp;lt;').gsub(/&amp;/, '&amp;amp;')
 end
 #/Applications/TextMate.app/Contents/SharedSupport/Support/
-output = `"$TM_SUPPORT_PATH/bin/CocoaDialog.app/Contents/MacOS/CocoaDialog" inputbox --title Input --informative-text 'Search For...' --button1 'Search' --button2 'Abort'`
+output = `"$TM_SUPPORT_PATH/bin/CocoaDialog.app/Contents/MacOS/CocoaDialog" inputbox --float --title Input --informative-text 'Search For...' --button1 'Search' --button2 'Abort'`
 output = output.split("\n")
 
 # check the button pressed, exit if it wasn't Record
