• mark old paste command as deleted
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@5617 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -9,6 +9,7 @@
 		<string>CC1B8D51-A3E8-4940-B4E8-E0B87D0E4BBA</string>
 		<string>0473E42E-A64E-4D3E-B20B-BA66E0145BC4</string>
 		<string>CF71D03D-B8F1-40E1-9C94-A3B3B91816A0</string>
+		<string>20B6054F-965B-4C9B-91DA-E6868A721954</string>
 	</array>
 	<key>mainMenu</key>
 	<dict>
